# term-charts

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/termcharts/: __init__.py  charts.py  cli.py
tests/: test_charts.py  test_cli.py
